# BACK_TESTING

./: .env.example  .gitignore  Aggiornamento_repo:isistente.md  PRD_blueprint_full.md  PRD_complete_signal_lab.md  PRD_consolidato_signal_chain_lab.md  PRD_signal_chain_FULL.md  PRD_signal_chain_backtesting.md  README.md  prd_allegato_integrazioni_prodotto_v1.md  pyproject.toml  pytest.ini  signal_backtesting_prd.md  signal_chain_lab_full_handoff.md  signal_chain_lab_full_handoff_v2.md  signal_chain_lab_full_handoff_v4.md  signal_chain_lab_full_handoff_v5.md  signal_chain_lab_prd_revision_notes_v2.md
.claude/: settings.local.json
DB_PARSING/: unresolved_messages.csv
configs/: app.yaml  logging.yaml  optimizer.yaml
docs/: AGENTE_PROMPT_TEMPLATE.md  CHECKLIST_SVILUPPO.md  DELTA_policy_report_trade_detail.md  DESIGN_partial_fill_model.md  Flusso generale del simulatore.md  GAP_LIST_TECNICA_OPERATIVO_FUNDING.md  GUI_IMPLEMENTATION_PLAN.md  GUI_PRD.md  GUI_stato_attuale_vs_PRD.md  Miglioramento_report_trade.md  NOTE_VARIE.md  PDR_tecnico_breve.md  PIANO_OPERATIVO.md  PRD_REPORT.md  PRD_REPORT_revisionato_e_delta.md  PRD_funding_model.md  PRD_market_data_backtesting_incrementale.md  PRD_miglioramento_backtest_performance.md  PRD_operativo_report_trade_da_zero_v4_osservazioni_integrate.md  PRD_single_trade_interactive_report.md  PRD_unificazione_semantica_entry copy.md  PRD_unificazione_semantica_entry.md  PROMPT_IMPLEMENTAZIONE_FUNZIONI_MARKET_DATA.md  Supporto simulatore.md  architecture.md  audit_db_report.md  data-contracts.md  development-phases.md  mini_prd_allegato_bybit_provider_backtesting.md
parser_test/: PARSER_DEVELOPMENT_TEMPLATE.md  README.md
scripts/: audit_existing_db.py  gap_validate_market_data.py  plan_market_data.py  report_market_coverage.py  run_comparison_report.py  run_policy_report.py  run_scenario.py  run_single_chain.py  sync_funding_rates.py  sync_market_data.py  (+2 more)
(+6146 files in other folders)
