[project]
name = "signal-chain-lab"
version = "0.1.0"
description = "Event-driven backtesting lab for signal chains"
requires-python = ">=3.12"

dependencies = [
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "PyYAML>=6.0",
  "aiosqlite>=0.20.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
gui = [
  "nicegui>=2.0",
]

telegram = [
  "telethon>=1.34.0",
]

db = [
  "sqlalchemy>=2.0",
]

analytics = [
  "pandas>=2.0",
  "pyarrow>=15.0",
  "duckdb>=1.0",
  "polars>=1.0",
  "plotly>=5.0",
]

optimizer = [
  "optuna>=4.0",
]

full = [
  "nicegui>=2.0",
  "telethon>=1.34.0",
  "sqlalchemy>=2.0",
  "pandas>=2.0",
  "pyarrow>=15.0",
]

dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "mypy>=1.0",
  "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests", "src"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
